syntax = "proto3";

package pb;

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";

service Modelsun {
    rpc Ping (google.protobuf.Empty) returns (Test) {
    }

}

message Test {
    string text = 1;
    google.protobuf.Timestamp created_at = 2;
}

// Code generated. DO NOT EDIT

message User {
	string id = 1;
	string login = 2;
	string email = 3;
	bool is_online = 4;
	string price = 6;
	double summa = 7;
	int64 cnt = 8;
	string message = 9;
	bytes metrika = 10;
	repeated string alias = 11;
	bytes data = 12;
	google.protobuf.Timestamp created_at = 13;
	google.protobuf.Timestamp updated_at = 14;
	google.protobuf.Timestamp deleted_at = 15;
}

message Order {
	string id = 1;
	string user_id = 2;
	int64 number = 3;
	int32 status = 4;
	google.protobuf.Timestamp created_at = 5;
	google.protobuf.Timestamp updated_at = 6;
	google.protobuf.Timestamp deleted_at = 7;
}

message Role {
	string id = 1;
	string code = 2;
	string description = 3;
}
